# t2n

./: .gitignore  CMakeLists.txt  README.md
include/t2n/: error.hh  parse-english.hh  parse-finnish.hh  parser.hh  t2n.hh
src/: error.cpp  main.cpp  parse-english.cpp  parse-finnish.cpp  parser.cpp  parser.hh  t2n_utils.cpp  t2n_utils.hh
test/: main.cpp
